some additions made to dbaccess.clj and home.clj

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -17,14 +17,21 @@
     
     <ul class="nav nav-tabs nav-justified">
       <li role="presentation" class="active">
-      <a href="#">Workouts</a>
-      
-      <ul>
-        {% for workout in workouts %}
-        <li> {{workout}} </li>
-        {% endfor %}
-      </ul>      
+        <a href="#">Workouts</a>
+        
+        <!-- <div class="container"> -->
+        <!--   <div class="row row-centered"> -->
+        <!--     {% for workout in workouts %} -->
+        <!--     <div class="col-xs-3 col-centered"> -->
+        <!--       <div class="item"> -->
+        <!--         <div class="content">{{workout}}</div> -->
+        <!--       </div> -->
+        <!--       {% endfor %} -->
+        <!--     </div> -->
+        <!--   </div> -->
+        <!-- </div> -->
       </li>
+      
       <li role="presentation">
         <a href="#">Coders</a>
         <ul>
