--- a/resources/templates/loginScreen.html
+++ b/resources/templates/loginScreen.html
@@ -98,7 +98,9 @@
 
 <!-- <link href="{{servlet-context}}/css/loginScreen.css" rel="stylesheet"> -->
 
-{% endblock %} {% block page-scripts %}
+{% endblock %} 
+
+{% block page-scripts %}
 <script type="text/javascript">
     $(function() {
         $('#login-form-link').click(function(e) {
