using ajax to load the createworkout dialog textual representation

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -32,6 +32,7 @@
 
     {% script "/assets/jquery/jquery.min.js" %}
     {% script "/assets/bootstrap/js/bootstrap.min.js" %}
+    {% script "/js/date.format.js" %}
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
