--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
 {% block content %}
-
 <div id="mainBody" class="jumbotron">
     <h1>Welcome to gidicodersworkout
       <span><a class="btn btn-primary btn-lg" 
@@ -26,40 +25,13 @@
                 <p class="list-group-item-text">{{workout.workout_text}}</p>
             </a>
             {% endfor %}
-            <button id="createWorkoutButton" class="btn btn-primary btn-lg">Create Workout</button>
-            <!-- <a id="createWorkoutButton" class="btn btn-primary btn-lg" href="#"  -->
-            <!--    data-toggle="modal" data-target="#createWorkoutModal">Create Workout</a> -->
         </div>
 
         <div id="coders-list" class="list-group tab-pane" role="tabpanel">
             {% for user in coders %}
-            <a href="#" class="list-group-item"> {{user.first_name}} - {{user.last_name}}</a> 
-            {% endfor %}
+            <a href="#" class="list-group-item"> {{user.first_name}} - {{user.last_name}}</a> {% endfor %}
         </div>
     </div>
 
 </div>
 {% endblock %} 
-
-{% block page-scripts %}
-<script type="text/javascript">
-  jQuery(document).ready(function(){
-    jQuery('#createWorkoutButton').click(function() {
-
-    jQuery.get('customTemplates/createWorkout.snippet.html', function(data) {
-        jQuery('#createWorkoutModal').remove();
-        jQuery('#mainBody').append(data);
-        jQuery('#createWorkoutModal').modal('show');
-        //console.log("DAta Ajaxed!" + data);
-
-        var now = new Date();
-        //The following is possible because of the date.format.js file
-        var nowAsText = now.format("mm/dd/yyyy hh:MM:ss");
-  
-        jQuery('#startDateInput').val(nowAsText);
-      }, "text");
-    });
-  });
-</script>
-
-{% endblock %}
